[package]
name = "finalbiome-impex"
version = "0.2.2"
description = "A utility to easily create a game spec for testnet."
authors = ["FinalBiome Devs <https://github.com/finalbiome>"]
homepage = "https://finalbiome.net/"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/finalbiome/finalbiome-impex/"
readme = "README.md"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
subxt = "0.25.0"
parity-scale-codec = "3.2.1"
tokio = { version = "1.23.0", features = ["full"] }
sp-runtime = "7.0.0"
sp-core = "7.0.0"
serde_json = "1.0.91"
serde = "1.0.155"
indicatif = "0.17.2"

[dev-dependencies]
